<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bluerobotics_sonar</name>
  <version>0.0.1</version>
  <description>ROS 2 interface for Blue Robotics sonars</description>
  <maintainer email="itskalvik@gmail.com">ItsKalvik</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>bluerobotics_sonar_msgs</depend>
  <depend>python3-scipy</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

